tests/rosetta/transpiler/Clojure/case-sensitivity-of-identifiers.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/case-sensitivity-of-identifiers.clj:21:98).
Unable to resolve symbol: pkg_dog in this context

Full report at:
/tmp/clojure-5062115974007023589.edn
